fixed layout bugs, added resources sectoin links

--- a/sass/about_me.sass
+++ b/sass/about_me.sass
@@ -1,1 +1,15 @@
+/***** About Me Section *****/
 @import 'var'
+
+.profile_img
+  float: left
+  height: 250px
+  widht: 170px
+  border-radius: 2px
+  box-shadow: 0px 4px 4px 0px $box_shadow
+
+.img_wrapper
+  padding: 10px
+
+.about_me_text
+  font-size: 24px
