--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -1,4 +1,7 @@
-/***** Footer Section ******/
+/***** Footer Section
+  'http://www.bravotv.com/sites/nbcubravotv/files/field_blog_image/2016/11/jet-set-iceland-promote.jpg'
+  
+   ******/
 @import 'var'
 
 footer 
@@ -6,7 +9,7 @@ footer
   justify-content: center
   align-items: center
   height: 280px
-  background-image: url('http://www.bravotv.com/sites/nbcubravotv/files/field_blog_image/2016/11/jet-set-iceland-promote.jpg')
+  background-image: url('../img/bg/pimg2.png')
   background-position: center
   background-size: cover
   background-repeat: no-repeat
@@ -17,6 +20,6 @@ footer
   font-weight: 700
   font-size: 30px
   margin-top: 100px
-  background-color: $footer_text_bg
-  opacity: 0.8
+  background-color: $turkis_dark
+  opacity: 0.6
   padding: 0px 20px
