--- a/sass/projects.sass
+++ b/sass/projects.sass
@@ -2,11 +2,6 @@
 @import 'var'
 
 section
-  .title 
-    font-size: 2.75rem
-    font-weight: 600
-    margin-bottom: 30px
-    text-align: center
   .boxtitle 
     font-size: 1.75rem
     font-weight: 275
@@ -24,7 +19,16 @@ section
   padding: 40px
   height: 90%
   background-color: $box_bg
+  transition: all 0.4s ease
+
   &:hover
-    -webkit-box-shadow: 0 4px 8px 0 $box_shadow
-    -moz-box-shadow: 0 4px 8px 0 $box_shadow
-    box-shadow: 0 4px 8px 0 $box_shadow
+    box-shadow: 0px 6px 6px 0px $box_shadow
+
+.projects_bg_img
+  position: relative
+  background-image: url(../img/bg/pimg3.png)
+  background-size: cover
+  background-position: center
+  background-repeat: no-repeat
+  background-attachment: fixed
+  opacity: 0.9
