--- a/sass/social.sass
+++ b/sass/social.sass
@@ -11,8 +11,10 @@
   a 
     text-decoration: none
     font-size: 80px
-    padding: 0px 20px
+    padding: 0px
     color: $turkis_light
     &:hover
       transition: all 0.5s ease
       color: $turkis_dark
+  i
+    transform: scale(1.2)
